--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
     </section>
 
     <section id="page-header" class="blog-header">
-        <h2>#readmore</h2>
+        <h2>#ReadMore</h2>
         <p>Read all case studies about our products!</p>
     </section>
 
